# manchuri

./: README.md  requirements.txt
AI_NEWS_SUMMARIZER/: app.py  requirements.txt
AI_NEWS_SUMMARIZER/src/: main.py
Agentic_AI_Chatbot/: .gitignore  README.md
BlogCreation_Using_Agentic_AI/: README.md  app.py  langgraph.json  main.py  pyproject.toml  request.json  requirements.txt
BlogCreation_Using_Agentic_AI/src/graph/: graphbuilder.py
BlogCreation_Using_Agentic_AI/src/llm/: groqllm.py
BlogCreation_Using_Agentic_AI/src/nodes/: blognode.py
BlogCreation_Using_Agentic_AI/src/state/: state.py
C++_Practise/: cb_lambda  cb_lambda.cpp  climbingsteps  climbingsteps.cpp  scratch.cpp  scrt  scrt.cpp  set_target_sum  set_target_sum.cpp  sets  sets.cpp  thread  thread.cpp  unorderedset  unorderedset.cpp
CUDA_Programs/: GPU_Add1D_vs_3D.ipynb  GPU_Tiled_Multipllication.cu  GPU_array_addition.cu  Google_Collab_GPU_Efficiency_Demo.ipynb  MatMul_GPU.ipynb  Mutex_demo.cu  Tiled_matmul.cu
MachineLearning_Practise/AdaBoost/: adaboost.py
PRACH_RootSeqence_Detection_Using_CNN/: PRACH_RootSequence_Detection_Application_using_CNN.ipynb  prach_rootsequence_detection_application_using_cnn.py
Pytorch_practise/: CV_Practise_customdataloader.py  Computer_Vision.py  Flask_basics.py  Linear_regression.py  MultiClass_Classification.py  non_linear_binary_classification.py  toy.py
Spark_paractise/: Baisc_2.py  Basics_Spark1.py  DataFrame_basics.py  DataFrame_operations.py
src/langgraph_agenticai/: main.py
transformer_lowrank_attention/: .gitignore  README.md  requirements.txt
(+25 files in other folders)
