[project]
name = "blog-agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.77",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.8",
    "langgraph-cli[inmem]>=0.4.2",
    "uvicorn>=0.37.0",
    "watchdog>=6.0.0",
]
